[package]
name = "actix_blog"
version = "0.2.0"
authors = ["jamie"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "src/lib.rs"

[[bin]]
name = "main"
doc = false
path = "src/main.rs"

[features]
default = ["http1"]
http1 = []
http2 = []

[dependencies]
# web framework
actix-web = { version = "1.0", features = ["ssl"] }
actix = "0.8"
actix-session = "0.2"
actix-http = "0.2"
actix-files = "0.1"
actix-rt = "0.2"
actix-identity = "0.1"
openssl = { version = "0.10", features = ["v110"] }
futures = "0.1"
bcrypt = "0.5"
itertools = "0.8"
juniper = "0.13"

# error handler
failure = "0.1"

# database orm
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }

# for serilize and diserialize
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

num_cpus = "1.10"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
toml = "0.5"
regex = "1.2"
lazy_static = "1.3"
env_logger = "0.6"
dotenv = "0.14"

# template engine
tera = "1.0"

# for code genration, proc macro
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
actix-service = "0.4"
bytes = "0.4"
serde_json = "1.0"
rand = "0.7"

[profile.release]
opt-level = 3
lto = true # optimization for Link-Time Optimizations