[package]
name = "actix_blog"
version = "0.3.0"
authors = ["Jamie Deng <djptux@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true
path = "src/lib.rs"

[[bin]]
name = "main"
doc = false
path = "src/main.rs"

[features]
default = ["http1"]
http1 = []
http2 = []

[dependencies]
# web framework
actix-web = { version = "2.0", features = ["openssl"] }
actix = "0.9"
actix-session = "0.3"
actix-http = "1.0"
actix-files = "0.2"
actix-rt = "1.0"
actix-identity = "0.2"
openssl = { version = "0.10", features = ["v110"] }
futures = "0.3"
bcrypt = "0.13"
itertools = "0.8"
juniper = "0.15"

# error handler
failure = "0.1"

# database orm
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }

# for serialization and diserialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

num_cpus = "1.12"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
toml = "0.5"
regex = "1.3"
lazy_static = "1.4"
env_logger = "0.7"
dotenv = "0.15"

# template engine
tera = "1.0"

# for code genration, proc macro
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
actix-service = "1.0"
bytes = "0.5"
serde_json = "1.0"
rand = "0.7"

[profile.release]
opt-level = 3
lto = true